# flatnet

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: release-cli.yml
config/cni/: flatnet-multihost.conflist.example  flatnet.conflist
config/nebula/: host.yaml.template  lighthouse.yaml.template
config/openresty/: .gitkeep  nginx-forgejo.conf  nginx.conf
config/openresty/conf.d/: api.conf  escalation.conf  flatnet.conf  forgejo.conf  proxy-params.conf  security-headers.conf  ssl.conf.example  websocket-params.conf
configs/: flatnet.conflist
containers/forgejo/: forgejo.container  podman-compose.yml
docs/: BRANCHING.md
docs/architecture/: container.md  context.md
docs/blog/: 2024-01-introducing-flatnet-cli.md  2024-01-introducing-flatnet-cli.pukiwiki.txt
docs/cli/: README.md  configuration.md  getting-started.md  installation.md  quick-reference.md  troubleshooting.md  use-cases.md
docs/guides/: phase1-operations.md  phase1-setup-guide.md  phase1-troubleshooting.md  phase1-validation-checklist.md  phase3-lighthouse-setup-guide.md  quickstart.md
docs/operations/: backup-restore.md  checklist-templates.md  cni-operations.md  daily-operations.md  known-issues-template.md  load-test-report-template.md  maintenance.md  operations-guide.md  runbook.md  setup-guide.md  test-plan.md  troubleshooting.md  validation-report-template.md
docs/phases/: README.md
docs/security/: access-control-policy.md  audit-checklist.md  audit-report-template.md  incident-response.md  tls-setup.md  vulnerability-report-template.md
docs/setup/: phase-2-setup.md
examples/forgejo/: run.sh
examples/openresty/: nginx.conf
logging/logrotate/: rotate-logs.ps1
logging/loki/: loki-config.yml
logging/promtail/: promtail-config.yml
monitoring/: .env.example  README.md  podman-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
scripts/: backup.sh  cross-host-routing.sh  deploy-config.sh  deploy-nebula-scripts.sh  get-wsl2-ip.sh  install-cli.sh  restore.sh  test-cni.sh  test-escalation.sh  test-integration.sh  update-upstream.sh
scripts/forgejo/: forgejo.container  run.sh  stop.sh
scripts/monitoring/: start.sh  status.sh  stop.sh
scripts/nebula/: gen-ca.ps1  gen-host-cert.ps1  setup-host.ps1  setup-lighthouse.ps1  setup-routing.ps1  test-tunnel.ps1  wsl-routing.sh
scripts/security/: generate-cert.sh  scan-containers.sh  scan-rust-deps.sh
scripts/windows/: get-wsl2-ip.ps1  manage-openresty.ps1  setup-openresty.ps1  setup-route.ps1  update-nginx-upstream.ps1
scripts/wsl2/: setup-forwarding.sh  start-forgejo.sh
src/flatnet-cli/: Cargo.toml
src/flatnet-cli/src/: cli.rs  config.rs  main.rs
src/flatnet-cli/src/checks/: cni.rs  disk.rs  gateway.rs  mod.rs  monitoring.rs  network.rs
src/flatnet-cli/src/clients/: gateway.rs  loki.rs  mod.rs  podman.rs
src/flatnet-cli/src/commands/: doctor.rs  logs.rs  mod.rs  ps.rs  status.rs  upgrade.rs
src/flatnet-cni/: Cargo.toml
src/flatnet-cni/src/: bridge.rs  config.rs  error.rs  ipam.rs  main.rs  netns.rs  registry.rs  result.rs  veth.rs
tests/validation/: README.md  health-check.sh  load-test.sh
(+65 files in other folders)
